# elkai

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CMakelists.txt  LICENSE  MANIFEST.in  README-wip.md  README.md  README.txt  aaa.txt  appveyor.yml  build_wheels.sh  params.txt  pyproject.toml  pytest.ini  setup.py  test_tour.txt
.githooks/: pre-commit
.github/workflows/: c-cpp.yml  python-app.yml
LKH-2.0.9/: E3k.0.par  E3k.0.pi  E3k.0.tsp  Makefile  README.txt  lkh.sln  lkh.vcxproj  problem.txt  xray14012_1.par  xray14012_1.tsp
LKH-2.0.9/SRC/: AddCandidate.c  AddExtraCandidates.c  AdjustCandidateSet.c  AdjustClusters.c  AllocateStructures.c  Ascent.c  BuildKDTree.c  C.c  CreateDelaunayCandidateSet.c  CreateNNCandidateSet.c  CreateQuadrantCandidateSet.c  Create_POPMUSIC_CandidateSet.c  Delaunay.c  ERXT.c  FindTour.c  Flip_SL.c  Flip_SSL.c  Gain23.c  GenerateCandidates.c  Genetic.c  GreedyTour.c  Heap.c  LKHmain.c  Makefile  MinimumSpanningTree.c  OrderCandidateSet.c  PatchCycles.c  Random.c  ReadCandidates.c  ReadEdges.c  ReadLine.c  ReadParameters.c  ReadPenalties.c  ReadProblem.c  SFCTour.c  SegmentSize.c  Sequence.c  SolveDelaunaySubproblems.c  SolveKCenterSubproblems.c  SolveKMeansSubproblems.c  (+11 more)
LKH-3.0.8/: .gitignore  Makefile  README.txt  pr2392.par  pr2392.tsp  whizzkids96.atsp  whizzkids96.par
LKH-3.0.8/SRC/: AllocateStructures.c  Best5OptMove.c  BestKOptMove.c  BestSpecialOptMove.c  C.c  CVRP_InitialTour.c  ChooseInitialTour.c  CreateCandidateSet.c  CreateDelaunayCandidateSet.c  CreateQuadrantCandidateSet.c  Create_POPMUSIC_CandidateSet.c  Distance.c  FindTour.c  Forbidden.c  Gain23.c  Genetic.c  GreedyTour.c  IsPossibleCandidate.c  KSwapKick.c  LKH.c  LKHmain.c  LinKernighan.c  Makefile  MergeWithTourCLARIST.c  MergeWithTourIPT.c  PatchCycles.c  Penalty_ACVRP.c  Penalty_CVRP.c  Penalty_CVRPTW.c  Penalty_PDPTW.c  (+18 more)
elkai/: __init__.py  _elkai.c  _elkai.py  deprecated.py  types.py  utils.py
tests/: base_test.py  deprecated_test.py  known_solutions.py  test_coords.py  test_distance_matrix.py  test_internal_solver.py
(+10 files in other folders)
